# spdlog-meson

./: meson.build  upstream.wrap
example/: meson.build
tests/: meson.build
