# util_inc = include_directories('.')

# executable('bench_exe', 'bench.cpp', include_directories : [inc, util_inc], dependencies : thread_dep)
# executable('example_exe', 'example.cpp', include_directories : inc, dependencies : thread_dep)
# executable('multisink_exe', 'bench.cpp', include_directories : inc, dependencies : thread_dep)
